--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,14 @@
-[*.{js,jsx,ts,tsx,vue}]
+root = true
+
+[*.{js,css,scss,json,html,vue}]
 indent_style = space
 indent_size = 2
+
+[*]
+end_of_line = lf
+charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.md]
+trim_trailing_whitespace = false
